Add tests for Bazel sourceroot inference, fixes #444